# python-project-lvl3

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_loader/: cli.py  common.py  constants.py  downloader.py  exceptions.py  gen_name.py  loader.py  logging.py  names.py  parse_url.py  parsing.py  resources.py  url.py
page_loader/scripts/: page_loader.py
tests/: test_cli.py  test_download.py
