[tool.poetry]
name = "altvec_page_loader"
version = "0.4.1"
description = "Page loader project on hexlet"
authors = ["altvec <me@sergeykalistratov.com>"]
repository = "https://github.com/altvec/python-project-lvl3"
license = "MIT"
packages = [
    { include = "page_loader" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "License :: Freeware", 
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
beautifulsoup4 = "^4.8"
progress = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
wemake-python-styleguide = "^0.8.1"
flake8 = "^3.7"
coverage = "^5.0.3"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
