[tool.poetry]
name = "altvec_page_loader"
version = "0.4.4"
description = "Page loader project on hexlet"
authors = ["altvec <me@sergeykalistratov.com>"]
repository = "https://github.com/altvec/python-project-lvl3"
license = "MIT"
packages = [
    { include = "page_loader" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "License :: Freeware", 
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25"
beautifulsoup4 = "^4.9"
progress = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
wemake-python-styleguide = "^0.15.0"
flake8 = "^3.8"
coverage = "^5.4"
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
